gitops/shoal/hardening/rancher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-service
  namespace: cattle-system
spec:
  ports:
  - port: 80
    targetPort: 80
